# amethyst-inspector

./: .agignore  .gitattributes  Cargo.toml  README.md  TODO.md  aliases.js  search-index.js  settings.html  source-files.js
amethyst-inspector-derive/: Cargo.toml
amethyst-inspector-derive/src/: lib.rs
amethyst_inspector/: all.html  index.html  macro.inspect_default!.html  macro.inspect_default.html  macro.inspector!.html  macro.inspector.html  sidebar-items.js  struct.InspectorHierarchy.html  struct.InspectorState.html  struct.UiTransformDebug.html  trait.Inspect.html  trait.InspectControl.html  trait.InspectControlBuilder.html  type.FontList.html  type.SpriteList.html  type.TextureList.html
amethyst_inspector/hierarchy/: struct.InspectorHierarchy.html
amethyst_inspector/inspectors/SpriteRender/: type.SpriteList.html
amethyst_inspector/inspectors/TextureHandle/: type.TextureList.html
amethyst_inspector/inspectors/UiText/: type.FontList.html
amethyst_inspector/inspectors/UiTransformDebug/: struct.UiTransformDebug.html
examples/: main.rs
implementors/amethyst_inspector/: trait.InspectControl.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/shred/system/: trait.System.js
src/: controls.rs  hierarchy.rs  inspectors.rs  lib.rs  prelude.rs  utils.rs
src/amethyst_inspector/: controls.rs.html  hierarchy.rs.html  inspectors.rs.html  lib.rs.html  prelude.rs.html  utils.rs.html
src/controls/: misc.rs  numbers.rs  vectors.rs
src/inspectors/: Blink.rs  Named.rs  Rgba.rs  SimpleMarker.rs  SpriteRender.rs  TextureHandle.rs  Tint.rs  Transform.rs  U64Marker.rs  UiText.rs  UiTransform.rs  UiTransformDebug.rs  mod.rs
(+12 files in other folders)
