[package]
name = "amethyst-inspector"
version = "0.1.0"
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", features = ["saveload", "vulkan", "nightly"] }
amethyst-imgui = { path = "../amethyst-imgui" }
amethyst-inspector-derive = { path = "amethyst-inspector-derive" }
matches = "0.1"
paste = "0.1"
specs-derive = "0.4"

[features]
saveload = ["amethyst/saveload"]
