[package]
name = "amethyst-inspector"
version = "0.1.0"
edition = "2018"
description = "unity-like inspector for amethyst"
authors = ["Awpteamoose <cargo@awpteamoose.my.to>"]
license = "CC0-1.0"

[dependencies]
amethyst = "0.13"
amethyst-imgui = "0.5"
amethyst-inspector-derive = "0.1"
matches = "0.1"
paste = "0.1"
specs-derive = "0.4"

[features]
saveload = ["amethyst/saveload"]
