[package]
name = "amethyst-inspector-derive"
version = "0.1.0"
edition = "2018"
description = "derive macros for amethyst-inspector"
authors = ["Awpteamoose <cargo@awpteamoose.my.to>"]
license = "CC0-1.0"

[lib]
proc-macro = true

[dependencies]
syn = "1"
proc-macro2 = "1"
darling = "0.10"
proc-quote = "0.3"
